# firepup650-SQL

./: .gitignore  .replit  .replit.backup  askpass.sh  build.py  editor.py  fix.sh  git_log.txt  lspfix.sh  main.py  pyproject.toml  replit.nix
.cache/replit/: __replit_disk_meta.json
package/: README.md  setup.cfg  upload.sh
package/src/firepup650/: __init__.py
package/src/fkeycapture/: fkeycapture.py
package/src/fkeycapture_Firepup650.egg-info/: PKG-INFO  SOURCES.txt
package/src/fpsql/: __init__.py
