[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.11"
twine = "^4.0.2"
black = "^23.3.0"
keyrings-alt = "^4.2.0"

[tool.black]
exclude = ".pythonlibs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
