[metadata]
name = fkeycapture-ALEXANDERMAPLES
version = 0.0.1
author = ALEXANDERMAPLES
author_email = firepyp650@gmail.com
description = A way to capture keystrokes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
    Main = https://replit.com/@ALEXANDERMAPLES/fkeycapture
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src