[metadata]
name = fpsql
version = 1.0.2
author = Firepup650
author_email = firepyp650@gmail.com
description = An easy to use SQLite package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/F1repup650/firepup650-SQL
project_urls =
    Bug Tracker = https://github.com/F1repup650/firepup650-SQL/issues
    replit = https://replit.com/@Firepup650/firepup650-SQL-Package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src